<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:text="@string/select_supported_algorithm"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/supportedAlgorithms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/algorithmName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/algorithmVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nistLevel"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/indCCA"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/publicKey"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/privateKey"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lengthSignature"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/document"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/example_text"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/signedDocument"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8sp"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/validate"
                    android:layout_width="175dp"
                    android:layout_height="match_parent"
                    android:text="@string/validate_exact_signature"
                    android:textSize="14sp"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="161dp"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="557dp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/showKey"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:text="Show/hide public Key"
                    android:textSize="14sp"
                    tools:ignore="ButtonStyle,HardcodedText"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="161dp"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="557dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/shuffle"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:text="@string/shuffle_signature_and_validate"
                    android:textSize="14sp"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="215dp"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="509dp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/alter"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:baselineAligned="false"
                    android:text="@string/alter_signature_length_and_validate"
                    android:textSize="14sp"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="215dp"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="509dp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <TextView
                android:id="@+id/isValidated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/publicKeyField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8sp"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>